--- a/clients/src/App.css
+++ b/clients/src/App.css
@@ -1,38 +1,139 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* 1. Landing page */
+.bg{
+  height: 25rem;
+  width: 45rem;
+  background-color: chocolate;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 5rem;
+  margin-left: 18rem;
   font-size: calc(10px + 2vmin);
   color: white;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+input{
+  margin-top: 10px;
+  width: 29.2rem;
+  padding: 3px;
+  font-size: large;
+  border-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.landingButton{
+  margin-top: 5px;
+  width: 29.2rem;
+  padding: 3px;
+  border-radius: 5px;
+  color: white;
+  background-color: #282c34;
+  border: 1px solid white;
+  
+}
+
+.landingButton:hover{
+  color: white;
+  background-color: green;
+}
+
+/* Dashboard */
+
+.dashboard-container{
+  display: flex;
+  flex-direction: column;
+  margin-left: 10rem;
+  color: white;
+  border-radius: 5px;
+  margin-top: 2rem;
+}
+.margin{
+  margin-left: 50px;
+}
+
+.removeUnderline{
+  text-decoration: none;
+  color: green;
+}
+
+.topic-text{
+  color: darkblue;
+  font-family: cursive;
+  text-align: start;
+}
+
+.no-date{
+  margin-top: 2rem;
+ margin-left: 15rem;
+}
+
+
+/* Add topic */
+
+li{
+  list-style: none;
+  margin-left: 1rem;
+}
+
+.item-width{
+  width: 50rem;
+}
+
+textarea{
+  border-radius: 5px;
+  font-size: larger;
+  color: #282c34;
+}
+
+
+
+/* Tooltip */
+.my-tooltip{
+  margin-top: 2px;
+  position: relative;
+  display: inline-block;
+}
+
+.my-tooltip .tooltiptext{
+  
+  background-color: green;
+  color: whitesmoke;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 10px;
+  position: absolute;
+  z-index: 1;
+}
+
+.tooltipbtn{
+  padding: 5px 20px;
+  border: none;
+  color: white;
+  border: 1px solid white;
+  border-radius: 2px;
+  margin-top: 2px;
+}
+
+#hover_over_me:hover{
+  border: 2px solid black;
+  border-radius: 5px;
+}
+
+/*  Position of tooltip */
+#top{
+  bottom: 90%;
+  left: 50%;
+  margin-left: -60px;
+}
+#top::after{
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -15px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: green transparent transparent transparent;
 }
